{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 361,
  "lineage": "0ba920ab-d493-5266-243e-d1d066a87985",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397855647:security-group/sg-0a8557a93ed648539",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8557a93ed648539",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397855647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "remix-quiz-sg-tf"
            },
            "tags_all": {
              "Name": "remix-quiz-sg-tf"
            },
            "vpc_id": "vpc-06877c5e4188ea92f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "remix_quiz_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397855647:internet-gateway/igw-095577ef2abf66fcf",
            "id": "igw-095577ef2abf66fcf",
            "owner_id": "767397855647",
            "tags": {
              "Name": "remix-quiz-igw-tf"
            },
            "tags_all": {
              "Name": "remix-quiz-igw-tf"
            },
            "vpc_id": "vpc-06877c5e4188ea92f"
          },
          "dependencies": [
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "remix_quiz_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:loadbalancer/app/remix-quiz-alb-tf/5191f86e9a9a816f",
            "arn_suffix": "app/remix-quiz-alb-tf/5191f86e9a9a816f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "remix-quiz-alb-tf-1756248776.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:loadbalancer/app/remix-quiz-alb-tf/5191f86e9a9a816f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "remix-quiz-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a8557a93ed648539"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a6067762399e8d76"
              },
              {
                "subnet_id": "subnet-0f4dda6ea2beefed8"
              }
            ],
            "subnets": [
              "subnet-0a6067762399e8d76",
              "subnet-0f4dda6ea2beefed8"
            ],
            "vpc_id": "vpc-06877c5e4188ea92f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_subnet.remix_quiz_subnet_1",
            "aws_subnet.remix_quiz_subnet_2",
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "remix_quiz_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:listener/app/remix-quiz-alb-tf/5191f86e9a9a816f/67f6f9bdbda9170a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:targetgroup/remix-quiz-tg-tf/0e7edd8fb88e219d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:listener/app/remix-quiz-alb-tf/5191f86e9a9a816f/67f6f9bdbda9170a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:loadbalancer/app/remix-quiz-alb-tf/5191f86e9a9a816f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_lb.remix_quiz_alb",
            "aws_lb_target_group.remix_quiz_tg",
            "aws_subnet.remix_quiz_subnet_1",
            "aws_subnet.remix_quiz_subnet_2",
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "remix_quiz_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:targetgroup/remix-quiz-tg-tf/0e7edd8fb88e219d",
            "arn_suffix": "targetgroup/remix-quiz-tg-tf/0e7edd8fb88e219d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:767397855647:targetgroup/remix-quiz-tg-tf/0e7edd8fb88e219d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "remix-quiz-tg-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06877c5e4188ea92f"
          },
          "dependencies": [
            "aws_vpc.remix_quiz_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "remix_quiz_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397855647:route-table/rtb-0701799d2543e9966",
            "id": "rtb-0701799d2543e9966",
            "owner_id": "767397855647",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095577ef2abf66fcf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "remix-quiz-rtb-tf"
            },
            "tags_all": {
              "Name": "remix-quiz-rtb-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-06877c5e4188ea92f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.remix_quiz_igw",
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb1370a2b331ea72",
            "route_table_id": "rtb-0701799d2543e9966",
            "subnet_id": "subnet-0f4dda6ea2beefed8"
          },
          "dependencies": [
            "aws_internet_gateway.remix_quiz_igw",
            "aws_route_table.remix_quiz_rtb",
            "aws_subnet.remix_quiz_subnet_1",
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0088d71ad99a6b43a",
            "route_table_id": "rtb-0701799d2543e9966",
            "subnet_id": "subnet-0a6067762399e8d76"
          },
          "dependencies": [
            "aws_internet_gateway.remix_quiz_igw",
            "aws_route_table.remix_quiz_rtb",
            "aws_subnet.remix_quiz_subnet_2",
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "remix_quiz_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397855647:subnet/subnet-0f4dda6ea2beefed8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4dda6ea2beefed8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397855647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "remix-quiz-subnet-1-tf"
            },
            "tags_all": {
              "Name": "remix-quiz-subnet-1-tf"
            },
            "vpc_id": "vpc-06877c5e4188ea92f"
          },
          "dependencies": [
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "remix_quiz_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397855647:subnet/subnet-0a6067762399e8d76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6067762399e8d76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397855647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "remix-quiz-subnet-2-tf"
            },
            "tags_all": {
              "Name": "remix-quiz-subnet-2-tf"
            },
            "vpc_id": "vpc-06877c5e4188ea92f"
          },
          "dependencies": [
            "aws_vpc.remix_quiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "remix_quiz_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:767397855647:vpc/vpc-06877c5e4188ea92f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0f08a215d9b82f9fe",
            "default_route_table_id": "rtb-0617bd29f77e1dea6",
            "default_security_group_id": "sg-0a8557a93ed648539",
            "dhcp_options_id": "dopt-0b03a82a5ffa1c523",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06877c5e4188ea92f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0617bd29f77e1dea6",
            "owner_id": "767397855647",
            "tags": {
              "Name": "remix-quiz-vpc-tf"
            },
            "tags_all": {
              "Name": "remix-quiz-vpc-tf"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}